test-infra/kfp/kfp-standalone-1/kustomize/upstream/base/metadata/options/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: # kpt-merge: /metadata-grpc-service
  name: metadata-grpc-service
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|DestinationRule|default|metadata-grpc-service'
spec:
  host: metadata-grpc-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
