test-infra/kfp/kfp-standalone-1/kustomize/upstream/base/metadata/options/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: kubeflow/metadata-grpc
  name: metadata-grpc
  namespace: kubeflow
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|VirtualService|kubeflow|metadata-grpc'
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /ml_metadata
    rewrite:
      uri: /ml_metadata
    route:
    - destination:
        host: metadata-envoy-service.kubeflow.svc.cluster.local
        port:
          number: 9090
