test-infra/kfp/kfp-standalone-1/kustomize/upstream/base/metadata/options/istio/istio-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: /metadata-grpc-service
  name: metadata-grpc-service
  annotations:
    internal.kpt.dev/upstream-identifier: 'security.istio.io|AuthorizationPolicy|default|metadata-grpc-service'
spec:
  action: ALLOW
  selector:
    matchLabels:
      component: metadata-grpc-server
  rules:
  - {}
